refactor: route and tests
